First push evncup

--- a/src/pages/test.html
+++ b/src/pages/test.html
@@ -1,14 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <div>
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti a quos sunt animi temporibus accusantium, nihil dignissimos consequuntur eos natus in! In corrupti illo ducimus, vero sed aliquid repudiandae ab!
+<div class="evnIntro">
+    <div class="evnIntroBox">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="evnIntro_l-left">
+                        <div className="textBox">
+                            <div className="subTitle">Introduction</div>
+                            <div className="mainTitle">循環杯是什麼？</div>
+                        </div>
+                        <div class="contentText">
+                            循環杯又稱外借杯，提供於飲品購買的熱門地點，像是咖啡廳、手搖飲店、便利商店等，讓消費者外帶飲品時可以租借循環杯使用、甲地乙還，透過租借、歸還、回收、清洗、再使用機制，達到「減塑、愛環境」的目標。
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-7">
+                <div class="evnIntro_l-right">
+                    <img class="decoPot1" src="../img/evnIntro/decoPot/decoPot1.svg">
+                    <div class="evnIntro_imgBox">
+                        <img class="img-evnIntro" src="../img/evnIntro/img-evnIntro.svg">
+                        <img class="img-evnCupIll" src="../img/evnIntro/img-evnCupIll.svg">
+                    </div>
+                    <img class="decoPot2" src="../img/evnIntro/decoPot/decoPot2.svg">
+                    <img class="decoPot3" src="../img/evnIntro/decoPot/decoPot3.svg">
+                    <img class="decoPot4" src="../img/evnIntro/decoPot/decoPot4.svg">
+                </div>
+            </div>
+
+        </div>
+
     </div>
+    <div class="needBox">
+        <div class="needBox_bg">
+            <img class="decoBg1" src="../img/evnIntro/needBox-deco1.svg">
+            <div class="container">
+                <div className="textBox">
+                    <div className="subTitle">Why is it needed</div>
+                    <div className="mainTitle">為什麼需要循環杯</div>
+                </div>
+                <div class="needBox_introWrap">
+                    <img class="whitePot1" src="../img/evnIntro/decoPot/decoPot_white1.svg">
+
+                    <div class="needBox_content">
+                        <img src="../img/evnIntro/needBox-textDeco.svg" alt="">
+                        <div class="needBox_textBox">
+                            <div class="needBox_textBox_title">減少塑膠污染</div>
+                            <div class="needBox_textBox_text">
+                                塑膠是一種難以分解的材料，對環境造成極大的污染。一次性使用的塑膠飲料杯更是大量使用且易於產生，造成嚴重的塑膠污染問題。使用循環杯可以減少大量塑膠杯的使用，有效降低環境污染。
+                            </div>
+                        </div>
+                        <div class="needBox_textBox">
+                            <div class="needBox_textBox_title">提高資源回收利用率</div>
+                            <div class="needBox_textBox_text">
+                                循環杯可重複使用，使用壽命長，相對於一次性使用的塑膠杯來說，能夠更好地提高資源回收利用率。此外，在的生產也相對較為環保，生產過程中能夠更有效地利用資源，減少能源消耗。
+                            </div>
+                        </div>
+                    </div>
+                    <img class="whitePot2" src="../img/evnIntro/decoPot/decoPot_white2.svg">
+                    <img class="whitePot3" src="../img/evnIntro/decoPot/decoPot_white3.svg">
+                </div>
+            </div>
+            <img class="decoBg2" src="../img/evnIntro/needBox-deco2.svg">
+        </div>
+    </div>
+    <div class="startBox">
+        <div class="container">
+            <div className="textBox">
+                <div className="subTitle">How to start</div>
+                <div className="mainTitle">如何開始</div>
+            </div>
+        </div>
+    </div>
+    <div class="benefitsBox">
+        <div class="benefitsBox_bg">
+            <img src="../img/evnIntro/benefitsBg-deco.svg">
+            <div class="container">
+                <div className="textBox">
+                    <div className="subTitle">Benefits</div>
+                    <div className="mainTitle">經濟效益</div>
+                </div>
+                <div class="benefits_list">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="benefits_item">
+                                <div class="benefits_item_bg"></div>
+                                <div class="benefits_item_content">
+                                    <div class="benefits_item_title">降低原物料的開採需求</div>
+                                    <div class="benefits_item_text">廢棄物轉化為可再生資源，減少對原物料的開採需求。這不僅有助於保護自然生態，還可以減少環境和社會成本。
+                                    </div>
+                                </div>
+                                <img src="../img/evnIntro/benefits-Icon.svg">
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="benefits_item">
+                                <div class="benefits_item_bg"></div>
+                                <div class="benefits_item_content">
+                                    <div class="benefits_item_title">減少環境汙染問題</div>
+                                    <div class="benefits_item_text">減少垃圾的堆放和焚燒所產生的污染，改善空氣和水質，保護生態環境的健康和可持續性，提高綠色就業和經濟增長。
+                                    </div>
+                                </div>
+                                <img src="../img/evnIntro/benefits-Icon.svg">
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="benefits_item">
+                                <div class="benefits_item_bg"></div>
+                                <div class="benefits_item_content">
+                                    <div class="benefits_item_title">循環流程減少溫室氣體排放</div>
+                                    <div class="benefits_item_text">循環利用的過程中，減少溫室氣體的排放並促進可再生能源的發展和應用，提高人類的生活質量和健康。</div>
+                                </div>
+                            </div>
+                            <img src="../img/evnIntro/benefits-Icon.svg">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="policyBox">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div className="textBox">
+                        <div className="subTitle">Policy Support</div>
+                        <div className="mainTitle">政策支持</div>
+                    </div>
+                    <div class="policy_Intro">
+                        環保署10月31日發布「循環（外借）杯良好服務指引」，讓業者參考依循，未來消費者也只要透過辨認「特定標誌」，就能安心選擇租借。
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="policy_list">
+                        <div class="policy_item">
+                            <img src="../img/evnIntro/shop-711.svg">
+                        </div>
+                        <div class="policy_item">
+                            <img src="../img/evnIntro/shop-MD.svg">
+                        </div>
+                        <div class="policy_item">
+                            <img src="../img/evnIntro/shop-MB.svg">
+                        </div>
+                        <div class="policy_item">
+                            <img src="../img/evnIntro/shop-KFC.svg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
+
 </html>
